2004-02-05  Christian Ruppert <arc@users.sf.net>
	* po/it.po, configure.in: added italian language support. Many thanks
	  to Diego Bertone.

2004-01-27  Christian Ruppert <arc@users.sf.net>
	* uwm/init.c, uwm/init.h, uwm/settings.h: preliminary completion of
	  event data structures.

2004-01-25  Christian Ruppert <arc@users.sf.net>
	* uwm/settings.h: preliminary data structure implementation for user
	  event database.

2004-01-14  Christian Ruppert <arc@users.sf.net>
	* uwm/special.c (CheckCPP): fixed a bug in the new cpp check.
	* uwm/settings.h: defined some types (still empty).

2004-12-07  Christian Ruppert <arc@users.sf.net>
	* uwm/confparse.tab.y: implemented initialisation of
	  WINDOW-limit-functions
	* uwm/confparse.tab.y, uwm/conf_func.c, uwm/conf_func.h: added
	  initialisation of WINDOW-functions, still need to be implemented.
	* uwm/conf_func.h: changed names of cf_args elements to match function
	  names.

2004-12-04  Christian Ruppert <arc@users.sf.net>
	* uwm/conf_func.c, uwm/conf_func.h, uwm/confparse.tab.y: implemented
	  and extended WINDOW NEXT in new config file/event processor.
	* uwm/confparse.tab.y: added first function recording code for quit
	  and shell commands in config parser.

2004-11-24  Christian Ruppert <arc@users.sf.net>
	* uwm/windows.c(MoveResizeWindow): fixed bug that windows with static
	  gravity aren't properly moved/resized.
	* uwm/handlers.c(HandleFocusOut): fixed bug that sometimes erroneously
	  displayed new windows as if they had the focus although they had not.

2004-11-14  Christian Ruppert <arc@users.sf.net>
	* uwm/confparse.tab.y: removed a segfault on unexpected end of file.
	* uwm/confparse.tab.y: removed all reduce/reduce conflicts.
	* uwm/confparse.tab.y: examined remaining shift/reduce conflicts and
	  they're okay.
	* uwm/confparse.tab.y: we now need semicolons after every expression,
	  even after curly braces. This is much cleaner than without them.