@@ -68,16 +68,17 @@ NodeList* ScanScreen(Window win)
   Node *winNode;
   NodeList *wins;
 
-  if(!(wins=NodeListCreate())) SeeYa(1,"FATAL: out of mem!");
-  for(winNode=TheScreen.UltimateList->first;winNode;winNode=winNode->next){
-	UltimateContext*uc=winNode->data;
-    if(uc&&uc->WorkSpace==TheScreen.ActiveWorkspace&&!IsIconic(uc)){
-	  ScanData *data;
-	  data=MyCalloc(1,sizeof(ScanData));
-	  data->x1=uc->Attr.x;data->x2=uc->Attr.x+uc->Attr.width;
-	  data->y1=uc->Attr.y;data->y2=uc->Attr.y+uc->Attr.height;
-	  NodeAppend(wins,data);
-	}
+  if(!(wins = NodeListCreate())) SeeYa(1, "FATAL: out of mem!");
+  winNode = NULL;
+  while(winNode = NodeNext(TheScreen.UltimateList, winNode)) {
+    UltimateContext *uc = winNode->data;
+    if(uc && WinVisible(uc)) {
+      ScanData *data;
+      data = MyCalloc(1, sizeof(ScanData));
+      data->x1 = uc->Attr.x; data->x2 = uc->Attr.x + uc->Attr.width;
+      data->y1 = uc->Attr.y; data->y2 = uc->Attr.y + uc->Attr.height;
+      NodeAppend(wins, data);
+    }
   }
 /*  XQueryTree(disp,TheScreen.root,&dummy,&dummy,&children,&number);
 
