@@ -1,3 +1,11 @@
+2004-07-21  Christian Ruppert <arc@users.sf.net>
+	* ude/placement.c: Some very slight modifications to make Edd Buduleas
+	  placement patch use preexisting infrastructure.
+
+2004-07-21  Edd Budulea <e_timotei@users.sf.net>
+	* ude/placement.c: patched ScanScreen so that UltimateList is used
+	  instead of a server roundtrip request.
+
 2004-02-05  Christian Ruppert <arc@users.sf.net>
 	* po/it.po, configure.in: added italian language support. Many thanks
 	  to Diego Bertone.
